--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="edit_box_hint">Search query term</string>
     <string name="contentDescription_image">Picture of article</string>
 
+    <!-- TextView -->
+    <string name="enable_notification">Enable notifications (Once per day)</string>
+
     <!-- EditText -->
     <string name="term">Search query term</string>
 
@@ -31,6 +34,4 @@
     <string name="dm_Sports">@string/cb_Sports</string>
     <string name="dm_Travels">@string/cb_Travels</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
